--- a/style.css
+++ b/style.css
@@ -3,3 +3,22 @@
 * {
     box-sizing: border-box;
 }
+
+body {
+    background-image: url('https://images.unsplash.com/photo-1582470584920-7946b028fdea?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1886&q=80');
+    background-size: cover;
+    background-position: center center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh; 
+    font-family: "Poppins", sans-serif;
+    margin: 0;
+    color: #fff;
+    text-shadow: 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black
+}
+
+.countdown-container {
+    display: flex
+}
